Changes the way that the clusterer is refreshed to avoid blinking markers

--- a/frontend/emi/devices-location/devices-location.component.html
+++ b/frontend/emi/devices-location/devices-location.component.html
@@ -31,6 +31,10 @@
       </mat-select>
     </mat-form-field>
 
+    <button mat-mini-fab (click)="updateIconTest()">
+      <mat-icon aria-label="Show/hide disconnnected devices">text_format</mat-icon>
+    </button>
+
   </div>
   <!-- / HEADER -->
 
@@ -38,23 +42,5 @@
 
  <div #gmap style="width:100%; height:100%; margin: 0; padding: 0">
  </div>
-
- <div id="cover-div" fxLayout="column" fxLayoutAlign="center end">
-  <button mat-mini-fab (click)="adjustZoomAccordingToTheMarkers()" matTooltip="{{ 'OPTION_PANEL.FIT_ZOOM_MARKERS' | translate }}">
-    <mat-icon aria-label="Adjust zoom according to the markers">center_focus_strong</mat-icon>
-  </button>
-  <button mat-mini-fab class="mat-grey-bg" (click)="showAndHideDisconnectedDevices()" *ngIf="showDisconnectedDevices" matTooltip="{{ 'OPTION_PANEL.HIDE_DISCONNECTED_DEVICE' | translate }}">
-    <mat-icon aria-label="Show/hide disconnnected devices">wifi</mat-icon>
-  </button>
-  <button mat-mini-fab color="accent" (click)="showAndHideDisconnectedDevices()" *ngIf="!showDisconnectedDevices" matTooltip="{{ 'OPTION_PANEL.SHOW_DISCONNECTED_DEVICE' | translate }}">
-      <mat-icon aria-label="Show/hide disconnnected devices">wifi</mat-icon>
-  </button>
-  <button mat-mini-fab (click)="updateMarkerClusterer()" *ngIf="false">
-    <mat-icon aria-label="Show/hide disconnnected devices">text_format</mat-icon>
-  </button>
- </div>
-
-
-
 
 </div>
